kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: OnlineEventBookingAteeb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: 22i0888/booking-service:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: OnlineEventBookingAteeb
spec:
  selector:
    app: booking-service
  ports:
  - protocol: TCP
    port: 3002
    targetPort: 3002
